crates/criticalup-cli/tests/snapshots/cli__install__already_installed_toolchain_should_not_throw_error.snap
---
source: crates/criticalup-cli/tests/cli/install.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
 INFO Skipping installation for product 'ferrocene' because it seems to be already installed.
If you want to reinstall it, please run 'criticalup install --reinstall'.
------
