crates/criticalup-cli/tests/snapshots/cli__install__empty_packages_list.snap
---
source: crates/criticalup-cli/tests/cli/install.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: Failed to load the project manifest at /path/to/manifest/criticalup-empty-packages.toml.
  caused by: The 'packages' list for product 'ferrocene' in your project manifest is empty. Please provide at least one package in the 'packages' list.
------
