crates/criticalup-cli/tests/snapshots/cli__install__help_message.snap
---
source: crates/criticalup-cli/tests/cli/install.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Install the toolchain for the given project based on the manifest `criticalup.toml`

Usage:
  criticalup-test install [OPTIONS]

Options:
      --project <PROJECT>           Path to the manifest `criticalup.toml`
      --reinstall                   Reinstall products that may have already been installed
  -v, --verbose...                  Enable debug logs, -vv for trace
      --log-level [<LOG_LEVEL>...]  Tracing directives
  -h, --help                        Print help
------
